--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-    "version": 2,
-    "public": false,
-    "github": {
-      "enabled": false
-    }
-  }
+  "version": 2,
+  "public": false,
+  "github": {
+    "enabled": false
+  },
+  "buildCommand": "pnpm run build"
+}
